# oulipo-llm

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
oulipo_llm/: __init__.py  oulipo_llm.py
tests/: __init__.py  conftest.py  test_oulipo_llm.py
