[project]
name = "oulipo-llm"
authors = [{ name = "Thierry Martinez", email = "thierry.martinez@inria.fr" }]
maintainers = [{ name = "Thierry Martinez", email = "thierry.martinez@inria.fr" }]
license-files = ["LICENSE"]
description = "Generate oulipo-style texts with LLM."
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff.lint]
select = ["ALL"]
# Allow "α" (U+03B1 GREEK SMALL LETTER ALPHA) which could be confused for "a"
# Allow "×" (U+00D7 MULTIPLICATION SIGN) which could be confused for "x"
allowed-confusables = ["α", "×"]
extend-ignore = [
    "D203", # `incorrect-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
    "D212", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible.
    "COM812", # The following rule may cause conflicts when used with the formatter: `COM812`.
]


[tool.mypy]
files = ["oulipo_llm", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101", # Use of `assert`
]
